# image-password

./: .dockerignore  .gitignore  Dockerfile.vercel  LICENSE  README.md
backend/: Cargo.toml  Dockerfile  Dockerfile.vercel  README.md
backend/src/: api.rs  main.rs  password_lib.rs
frontend/: Dockerfile  README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/image-to-password/: page.tsx
frontend/components/: image-to-password.tsx
