[package]
name = "image-password"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
image = "0.25"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
dotenvy = "0.15"
infer = "0.16"

